fixed achievements spacing

--- a/src/App.css
+++ b/src/App.css
@@ -563,7 +563,6 @@ body {
      .achievement-container{
       width: 80%;
       text-align: center;
-      padding-top: 10em;
     }
     
     .achievement-title{
